<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tp3"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone" />

    <EditText
        android:id="@+id/edtCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/celular" />

    <EditText
        android:id="@+id/edtCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf" />

    <EditText
        android:id="@+id/edtCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cidade" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSalvar"
            android:onClick="AddContatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btnLimpar"
            android:onClick="limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar" />
    </LinearLayout>

    <Button
        android:onClick="irContatos"
        android:id="@+id/btnVisualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualizar" />

</LinearLayout>